<resources>
    <string name="app_name">aioRestaurants</string>
    <string name="cashier">Cashier</string>
    <string name="profile">User Profile</string>
    <string name="sales">Sales</string>
    <string name="add_menu_item">Add Menu Item</string>
    <string name="delete_menu_item">Delete Menu Item</string>
    <string name="edit_menu_item">Edit Menu Item</string>
    <string name="pizzas">Pizzas</string>
    <string name="sides">Sides</string>
    <string name="soft_drinks">Soft Drinks</string>
    <string name="desserts">Desserts</string>
    <string name="cheese_pizza_s">Cheese - S</string>
    <string name="p10_99">$10.99</string>
    <string name="cheese_pizza_m">Cheese - M</string>
    <string name="p12_99">$12.99</string>
    <string name="cheese_pizza_l">Cheese - L</string>
    <string name="p15_99">$15.99</string>
    <string name="pepperoni_s">Pepperoni - S</string>
    <string name="p11_49">$11.49</string>
    <string name="pepperoni_m">Pepperoni - M</string>
    <string name="p13_99">$13.99</string>
    <string name="pepperoni_l">Pepperoni - L</string>
    <string name="p16_99">$16.99</string>
    <string name="sausage_s">Sausage - S</string>
    <string name="sausage_m">Sausage - M</string>
    <string name="sausage_l">Sausage - L</string>
    <string name="all_in_s">All In - S</string>
    <string name="p12_49">$12.49</string>
    <string name="all_in_m">All In - M</string>
    <string name="p14_99">14.99</string>
    <string name="all_in_l">All In - L</string>
    <string name="p17_99">$17.99</string>
    <string name="meat_lovers_s">Meat Lovers - S</string>
    <string name="meat_lovers_m">Meat Lovers - M</string>
    <string name="meat_lovers_l">Meat Lovers - L</string>
    <string name="hawaiian_s">Hawaiian - S</string>
    <string name="hawaiian_m">Hawaiian - M</string>
    <string name="hawaiian_l">Hawaiian - L</string>
    <string name="chicken_s">Chicken - S</string>
    <string name="chicken_m">Chicken - M</string>
    <string name="chicken_l">Chicken - L</string>
    <string name="canadian_s">Canadian - S</string>
    <string name="p11_99">$11.99</string>
    <string name="canadian_m">Canadian - M</string>
    <string name="p14_49">$14.49</string>
    <string name="canadian_l">Canadian - L</string>
    <string name="p17_49">$17.49</string>
    <string name="cash">Cash</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurants">restaurants</string>
</resources>